# telegram_expenses_chatbox

./: .env.example  .gitignore  Makefile  Procfile  README.md  application.py  main.py  pyproject.toml  requirements.txt
src/adapters/database/: __init__.py  postgres_repository.py
src/adapters/telegram_bot/: __init__.py  message_processor_repository.py  postgres_repository.py  user_repository.py
src/config/: __init__.py  config.py  dependencies.py
src/core/entities/: __init__.py  expense.py  incoming_message.py  message.py  out_message.py  user.py
src/core/exceptions/: __init__.py  exceptions.py
src/core/interface/: __init__.py  interface_database_repository.py  interface_message_processor.py  interface_message_processor_repository.py  interface_user_repository.py
src/core/use_cases/: __init__.py  process_user_message.py
src/utils/: __init__.py  standard_response.py  validations.py
