[tool.poetry]
name = "telegram-expenses-chatbox"
version = "0.1.0"
description = ""
authors = ["Constancio Molinengo <constancio.molinengo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
