[tool.poetry]
name = "telegram-expenses-chatbox"
version = "0.1.0"
description = ""
authors = ["Constancio Molinengo <constancio.molinengo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
flake8 = "^7.0.0"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"
openai = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
